# WebAssembly-Command-Handler

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  index.html  server.py
.github/workflows/: workflow.yml
docs/: REQUIREMENTS.md  sequenceDiagram.wsd
page/: index.html  styles.css  webasm.js
src/: CMakeLists.txt  README.md  main.cpp  main.hpp  screen.cpp  screen.hpp
src/command_handler/: CMakeLists.txt  command_handler.cpp  command_handler.hpp
src/command_handler/commands/: CMakeLists.txt  commands.cpp  commands.hpp
src/command_handler/history/: CMakeLists.txt  history.cpp  history.hpp
src/command_handler/menu/: CMakeLists.txt  menu.cpp  menu.hpp
src/graphic_lib/: CMakeLists.txt  screen.cpp  screen.hpp
src/graphic_lib/shapes/: CMakeLists.txt  shape_base.cpp  shape_base.hpp  shapes.cpp  shapes.hpp
